# orimi_shelf

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: config.py  redis_connect.py
fsm/: fsm.py
handlers/: user_handlers.py  utils.py
keyboards/: keyboards.py  menu.py
services/: logger.py  notifaction.py
